# old_ref_codex.base

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  rebuild.sh
codex.base/: CMakeLists.txt
codex.base.tests/: CMakeLists.txt  build.sh  test_allocator.cpp  test_async_layer.cpp  test_async_layer_tcp_socket.cpp  test_async_socket.cpp  test_buffer.cpp  test_channel.cpp  test_codex.cpp  test_error.cpp  test_loop.cpp  test_misc.cpp  test_reactor.cpp
codex.base/include/codex/: allocator.hpp  bit.hpp  codex.hpp  loop.hpp  object_allocator.hpp  operation.hpp  pipe.hpp  predefs.hpp  slist.hpp  timespan.hpp  timestamp.hpp
codex.base/include/codex/buffer/: ctrl_blk.hpp  packetizer.hpp  shared_blk.hpp
codex.base/include/codex/diag/: error.hpp
codex.base/include/codex/io/: async_layer.hpp  buffer.hpp  operation.hpp
codex.base/include/codex/io/ip/: address.hpp  address.ipp  socket_ops.hpp
codex.base/include/codex/io/ip/tcp/: acceptor.hpp  channel.hpp  channel_builder.hpp  proactor_channel.hpp  proactor_channel_builder.hpp  reactor_channel.hpp  reactor_channel_builder.hpp  socket.hpp
codex.base/include/codex/io/ip/tcp/async_ops/: connect.hpp
codex.base/include/codex/io/ip/tcp/operation/: connect_operation.hpp
codex.base/include/codex/log/: console_writer.hpp  formatter.hpp  log.hpp  logger.hpp  record.hpp  writer.hpp
codex.base/include/codex/proactor/: async_layer.hpp  iocp.hpp  proactor.hpp
codex.base/include/codex/reactor/: async_layer.hpp  epoll.hpp  eventfd_wakeup.hpp  kqueue.hpp  pipe_wakeup.hpp  poll_handler.hpp  reactor.hpp
codex.base/src/: allocator.cpp  codex.cpp  loop.cpp  pipe.cpp  timespan.cpp  timestamp.cpp
codex.base/src/buffer/: ctrl_blk.cpp  packetizer.cpp  shared_blk.cpp
codex.base/src/diag/: error.cpp
codex.base/src/io/: async_layer_reactor.cpp  buffer.cpp  operation.cpp
codex.base/src/io/ip/: socket_ops.cpp
codex.base/src/io/ip/tcp/: acceptor.cpp  channel.cpp  channel_builder.cpp  proactor_channel.cpp  proactor_channel_builder.cpp  reactor_channel.cpp  reactor_channel_builder.cpp  socket.cpp
codex.base/src/log/: console_writer.cpp  formatter.cpp  logger.cpp  record.cpp  writer.cpp
codex.base/src/proactor/: async_layer.cpp  iocp.cpp  proactor.cpp
codex.base/src/reactor/: async_layer.cpp  epoll.cpp  eventfd_wakeup.cpp  kqueue.cpp  pipe_wakeup.cpp  poll_handler.cpp  reactor.cpp
exam/echoserver/: CMakeLists.txt  main.cpp
